Fixed signin & signup validate errors + now looks better on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,9 @@
 .invisible {
     display: none;
 }
+
+/*Temporary - May change later*/
+.label-tag {
+    width : 100%;
+    overflow: hidden;
+}
